# MobileNet-SSD

./: CMakeLists.txt  README.md  opencv_dnn.cpp  opencv_video.cpp  ssd_detect.cpp  ssd_video.cpp
mobilenet/images/: imgs
